--- a/src/assest/css/attraction.scss
+++ b/src/assest/css/attraction.scss
@@ -91,3 +91,43 @@ a {
     opacity: 1;
   }
   
+
+@media (max-width: 992px) {
+  .card {
+    flex: 1 1 75px;
+    height: 100px; 
+  }
+  .card:hover {
+    flex: 2 1 105px; /* Увеличиваем карточку при наведении */
+  }
+  .attractions{
+    &__image img {
+      display: block;
+      width: 100%;
+      height: 100px;
+      object-fit: cover;
+    }
+    &__text{
+        color: #fff;
+        font-size: 12px;
+    }
+    &__text2{
+      font-size: 12px;
+      text-decoration: overline;
+    }
+    &__title{
+      font-size: 24px;
+    }
+    &__texts{
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      top: -60px;
+      padding: 5px;
+    }
+  }
+  
+  .wrapper {
+    height: 75px;
+  }
+}
