--- a/src/assest/css/style.scss
+++ b/src/assest/css/style.scss
@@ -48,7 +48,7 @@ textarea {
 
 body.black {
     input {
-        background: #3c3c3c;
+        background: #2c2c2c;
         color: #fff;
     }
     input[type="checkbox"] {
@@ -178,6 +178,16 @@ body.black {
                 border-bottom: 1px solid #ff814b;
                 border-radius: 0;
                 background-position: 100% center;
+            }
+        }
+    }
+    @media (max-width: 992px) {
+    .search__input {
+        width: 300px;
+        &::placeholder {
+            font-size: 10px;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
             }
         }
     }
@@ -875,5 +885,55 @@ html {
         &__text{
             font-size: 16px;
         }
+    }
+
+    .search__input {
+        width: 300px;
+
+        &::placeholder {
+            font-size: 10px;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
+        }
+    }
+    .revievs {
+        &__wrap{
+            display: flex;
+            flex-direction: column;
+        }
+        &__forms {
+            width: 385px;
+            padding: 35px 24px;
+            border-radius: 10px;
+            &-wrap{
+                display: flex;
+                justify-content: space-between;
+            }
+        }
+        &__text{
+            font-size: 12px;
+        }
+        &__input {
+            padding: 20px;
+            width: 160px;
+            font-size: 16px;
+        }
+        &__star{
+            margin-bottom: 15px;
+        }
+        &__reviev{
+            &-textarea{
+                max-width: 340px;
+            }
+        }
+        &__none{
+            margin-top: 30px;
+            position: relative;
+            top: 0;
+            left: 0;
+        }
+    }
+    .reviews {
+        width: 385px;
     }
 }
