--- a/src/assest/css/style.scss
+++ b/src/assest/css/style.scss
@@ -837,6 +837,7 @@ html {
             padding: 75px 20px 20px 20px;
             display: block;
             transition: transform 0.5s;
+            height: 270px;
         }
         &__link_img{
             display: none;
@@ -845,8 +846,9 @@ html {
             display: block;
         }
         &__switch{
+            height: 60px;
             position: relative;
-            top: -235px;
+            top: -230px;
             margin-left: 245px;
         }
     }
