--- a/src/assest/css/allAttract.scss
+++ b/src/assest/css/allAttract.scss
@@ -1,7 +1,7 @@
-.attraction{
+.attraction {
   &__sort,
-  &__filter{
-    &-select{
+  &__filter {
+    &-select {
       margin: 0 5px;
       padding: 5px 10px;
       border-radius: 10px;
@@ -9,22 +9,22 @@
   }
   &__card {
     background-color: transparent;
-    width: 450px; 
+    width: 450px;
     height: 375px;
     perspective: 1000px;
-    &-img{
+    &-img {
       width: 420px;
       height: 300px;
       border-radius: 20px;
     }
     &-inner {
-      width: 450px; 
+      width: 450px;
       height: 375px;
-      transition: transform 0.5s; 
+      transition: transform 0.5s;
       transform-style: preserve-3d;
     }
     &:hover &-inner {
-      transform: rotateY(-180deg); 
+      transform: rotateY(-180deg);
     }
     &-front,
     &-back {
@@ -36,134 +36,135 @@
     }
 
     &-front {
-      background-color: #F4F4F4;
+      background-color: #f4f4f4;
       padding: 15px 10px;
       color: #000;
     }
-    
+
     &-back {
       display: flex;
       justify-content: center;
       align-items: center;
       position: relative;
       top: -375px;
-      background-color: #7B61FF;
+      background-color: #7b61ff;
       color: white;
       transform: rotateY(180deg);
       padding: 50px 30px;
     }
-    &-wrap{
+    &-wrap {
       display: flex;
     }
-    &-local{
-      filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+    &-local {
+      filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg)
+        brightness(102%) contrast(102%);
     }
-    &-title{
+    &-title {
       text-align: left;
     }
-    &-address{
+    &-address {
       position: relative;
       top: 3px;
       font-size: 18px;
       opacity: 0.5;
     }
   }
-  &__wrap{
+  &__wrap {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;  
+    justify-content: center;
     gap: 30px;
-    &-sort{
+    &-sort {
       display: flex;
       justify-content: space-between;
       margin-bottom: 50px;
     }
   }
-  &__pagination{
+  &__pagination {
     display: flex;
     justify-content: center;
     margin: 40px 0 0 0;
     gap: 10px;
     transition: all ease 0.4s;
     &-btn {
-      color: #7B61FF;
+      color: #7b61ff;
       padding: 10px 20px;
       text-decoration: none;
-      border: 1px solid #7B61FF;
+      border: 1px solid #7b61ff;
       border-radius: 4px;
       transition: all ease 0.4s;
-      }
+    }
     &-btn:hover {
-      background-color: #7B61FF;
+      background-color: #7b61ff;
       color: white;
     }
   }
-  &__page{
-    &-title{
+  &__page {
+    &-title {
       text-align: center;
       font-size: 56px;
       position: relative;
       top: -70px;
     }
-    &-wrapper{
+    &-wrapper {
       display: flex;
       justify-content: space-between;
       gap: 75px;
     }
-    &-description{
-      &-title{
+    &-description {
+      &-title {
         font-size: 32px;
-        margin-top: 40px; 
+        margin-top: 40px;
         margin-bottom: 20px;
       }
     }
-    &-image{
+    &-image {
       border-radius: 20px;
     }
-    &-map{
+    &-map {
       border-radius: 20px;
       display: flex;
       justify-content: center;
-      &-title{
+      &-title {
         font-size: 36px;
         text-align: center;
         margin: 30px;
       }
     }
-    &-info{
+    &-info {
       text-align: center;
-      &-title{
-        margin: 30px 0 20px; 
+      &-title {
+        margin: 30px 0 20px;
         font-size: 36px;
         text-align: center;
       }
-      &-text{
+      &-text {
         font-size: 24px;
       }
     }
   }
 }
-    
+
 @media (max-width: 992px) {
-  .attraction{
+  .attraction {
     &__sort,
-    &__filter{
+    &__filter {
       display: flex;
       flex-direction: column;
       row-gap: 10px;
-      &-text{
+      &-text {
         font-size: 16px;
       }
     }
     &__card {
-      width: 375px; 
+      width: 375px;
       height: 300px;
-      &-img{
+      &-img {
         width: 345px;
         height: 225px;
       }
       &-inner {
-        width: 375px; 
+        width: 375px;
         height: 300px;
       }
       &-back {
@@ -171,25 +172,25 @@
         top: -300px;
       }
     }
-    &__page{
-      &-title{
+    &__page {
+      &-title {
         font-size: 36px;
         position: relative;
         top: 40px;
       }
-      &-wrapper{
+      &-wrapper {
         display: flex;
         flex-direction: column-reverse;
       }
-      &-description{
-        &-title{
+      &-description {
+        &-title {
           font-size: 28px;
         }
       }
-      &-image{
+      &-image {
         width: 375px;
         height: auto;
-        &-adapt{
+        &-adapt {
           margin: 75px 0 -75px;
         }
       }
