--- a/src/assest/css/attraction.scss
+++ b/src/assest/css/attraction.scss
@@ -1,124 +1,128 @@
 .container_2 {
-    max-width: 1760px;
-    margin: 0 auto;
+  max-width: 1760px;
+  margin: 0 auto;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-.attractions{
-    &__texts{
-      display: flex;
-      justify-content: space-between;
-      position: relative;
-      top: -70px;
-      padding: 10px;
-    }
-    &__area {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 150px;
-      background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-      backdrop-filter: blur(20px);
-      mask: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-    }
-    &__image {
-      position: relative;
-      display: inline-block;
-      width: 100%;
-    }
-    &__image img {
-      display: block;
-      width: 100%;
-      height: 300px;
-      object-fit: cover;
-    }
-    &__text{
-        color: #fff;
-    }
-    &__text2{
-      color: #fff;
-      opacity: 0;
-      transition: 0.3s ease;
-    }
-    &__title{
-      font-size: 32px;
-      text-align: center;
-      margin: 0 0 30px;
-      &-first{
-        font-size: 42px;
-        width: 700px;
-      }
-    }
-    &__wrap{
-      display: flex;
-      justify-content: center;
-    }
-  }
-  
-  .wrapper {
+.attractions {
+  &__texts {
     display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-    height: 300px;
-    transition: 0.3s all ease;
-    margin-bottom: 50px;
-  }
-  
-  .wrapper:hover > :not(:hover) {
-    filter: blur(5px) grayscale(100%);
-    opacity: 0.7;
-    transition: filter 0.3s ease, opacity 0.3s ease;
-  }
-  
-  .card {
+    justify-content: space-between;
     position: relative;
-    flex: 1 1 300px;
-    border-radius: 10px;
-    height: 300px; 
-    transition: flex 0.3s ease, filter 0.3s ease, opacity 0.3s ease; 
-    overflow: hidden;
+    top: -70px;
+    padding: 10px;
   }
-  
-  .card:hover {
-    flex: 2 1 400px; /* Увеличиваем карточку при наведении */
+  &__area {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 150px;
+    background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    backdrop-filter: blur(20px);
+    mask: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
   }
-  
-  .card:hover .attractions__text2 {
-    opacity: 1;
+  &__image {
+    position: relative;
+    display: inline-block;
+    width: 100%;
   }
-  
+  &__image img {
+    display: block;
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+  }
+  &__text {
+    color: #fff;
+  }
+  &__text2 {
+    color: #fff;
+    opacity: 0;
+    transition: 0.3s ease;
+  }
+  &__title {
+    font-size: 32px;
+    text-align: center;
+    margin: 0 0 30px;
+    &-first {
+      font-size: 42px;
+      width: 700px;
+    }
+  }
+  &__wrap {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  height: 300px;
+  transition: 0.3s all ease;
+  margin-bottom: 50px;
+}
+
+.wrapper:hover > :not(:hover) {
+  filter: blur(5px) grayscale(100%);
+  opacity: 0.7;
+  transition:
+    filter 0.3s ease,
+    opacity 0.3s ease;
+}
+
+.card {
+  position: relative;
+  flex: 1 1 300px;
+  border-radius: 10px;
+  height: 300px;
+  transition:
+    flex 0.3s ease,
+    filter 0.3s ease,
+    opacity 0.3s ease;
+  overflow: hidden;
+}
+
+.card:hover {
+  flex: 2 1 400px; /* Увеличиваем карточку при наведении */
+}
+
+.card:hover .attractions__text2 {
+  opacity: 1;
+}
 
 @media (max-width: 992px) {
   .card {
     flex: 1 1 75px;
-    height: 100px; 
+    height: 100px;
   }
   .card:hover {
     flex: 2 1 105px; /* Увеличиваем карточку при наведении */
   }
-  .attractions{
+  .attractions {
     &__image img {
       display: block;
       width: 100%;
       height: 100px;
       object-fit: cover;
     }
-    &__text{
-        color: #fff;
-        font-size: 12px;
+    &__text {
+      color: #fff;
+      font-size: 12px;
     }
-    &__text2{
+    &__text2 {
       font-size: 12px;
       text-decoration: overline;
     }
-    &__title{
+    &__title {
       font-size: 24px;
     }
-    &__texts{
+    &__texts {
       display: flex;
       flex-direction: column;
       position: relative;
@@ -126,7 +130,7 @@ a {
       padding: 5px;
     }
   }
-  
+
   .wrapper {
     height: 75px;
   }
