--- a/src/assest/css/home.scss
+++ b/src/assest/css/home.scss
@@ -1,70 +1,70 @@
-.main{
+.main {
   margin-bottom: 100px;
-    &__wrapper{
-        display: flex;
-        justify-content: center;
-        gap: 100px;
+  &__wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+  }
+  &__title {
+    margin-bottom: 60px;
+    width: 800px;
+    &-t {
+      text-align: center;
+      font-size: 56px;
     }
-    &__title{
-        margin-bottom: 60px;
-        width: 800px;
-        &-t{
-            text-align: center;
-            font-size: 56px;
+  }
+  &__btn {
+    display: flex;
+    &-t {
+      background-color: #7b61ff;
+      border-radius: 15px;
+      position: relative;
+      display: block;
+      padding: 20px 25px;
+      color: #262626;
+      font-size: 20px;
+      font-weight: 600;
+      transition: 0.5s;
+      z-index: 1;
+      &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-top: 2px solid #262626;
+        border-bottom: 2px solid #262626;
+        transform: scaleY(2);
+        opacity: 0;
+        transition: 0.3s;
+      }
+      &:after {
+        content: "";
+        position: absolute;
+        top: 2px;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #262626;
+        transform: scale(0);
+        opacity: 0;
+        transition: 0.3s;
+        z-index: -1;
+      }
+      &:hover {
+        color: #fff;
+        &:before {
+          transform: scaleY(1);
+          opacity: 1;
         }
+        &:after {
+          transform: scaleY(1);
+          opacity: 1;
+        }
+      }
     }
-    &__btn{
-        display: flex;
-        &-t {
-            background-color: #7B61FF ;
-            border-radius: 15px;
-            position: relative;
-            display: block;
-            padding: 20px 25px;
-            color: #262626;
-            font-size: 20px;
-            font-weight: 600;
-            transition: .5s;
-            z-index: 1;
-            &:before {
-              content: '';
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-              border-top: 2px solid #262626;
-              border-bottom: 2px solid #262626;
-              transform: scaleY(2);
-              opacity: 0;
-              transition: .3s;
-            }
-            &:after {
-              content: '';
-              position: absolute;
-              top: 2px;
-              left: 0;
-              width: 100%;
-              height: 100%;
-              background-color: #262626;
-              transform: scale(0);
-              opacity: 0;
-              transition: .3s;
-              z-index: -1;
-            }
-            &:hover {
-              color: #fff;
-              &:before {
-                transform: scaleY(1);
-                opacity: 1;
-              }
-              &:after {
-                transform: scaleY(1);
-                opacity: 1;
-              }
-            }
-          }
-    }
+  }
 }
 
 .container_2 {
@@ -77,7 +77,7 @@
     overflow: hidden;
     margin-bottom: 15px;
     border-radius: 20px;
-    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.7); 
+    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.7);
     & .cardd__title {
       z-index: 99;
       position: absolute;
@@ -129,7 +129,7 @@
       right: 30px;
       bottom: 40px;
       width: 30px;
-      height:30px; 
+      height: 30px;
       background-color: #7722a6;
       border: none;
       border-radius: 50%;
@@ -175,10 +175,10 @@
       display: flex;
       flex-direction: column;
     }
-  
+
     &__title {
       width: 385px;
-  
+
       &-t {
         text-align: center;
         font-size: 27px;
@@ -187,21 +187,21 @@
   }
 
   .container_2 {
-      & .cardd {
-        width: 385px;
-        & .cardd__pic {
-          width: 300px;
-        }
-        & .cardd__title {
-          font-size: 20px;
-        }
-        &:hover .cardd__title {
-          font-size: 32px;
-        }
-        &:hover .cardd__pic {
-          filter: grayscale(0);
-          width: 360px;
-        }
+    & .cardd {
+      width: 385px;
+      & .cardd__pic {
+        width: 300px;
       }
+      & .cardd__title {
+        font-size: 20px;
+      }
+      &:hover .cardd__title {
+        font-size: 32px;
+      }
+      &:hover .cardd__pic {
+        filter: grayscale(0);
+        width: 360px;
+      }
+    }
   }
 }
