lint-staged(test commit)

--- a/src/assest/css/style.scss
+++ b/src/assest/css/style.scss
@@ -87,6 +87,9 @@ body.black {
     &__menu {
       background: #535353;
     }
+    &__burger-btn {
+      background-color: #3c3c3c;
+    }
     &__text {
       color: #fff;
     }
