--- a/src/assest/css/allAttract.scss
+++ b/src/assest/css/allAttract.scss
@@ -100,6 +100,56 @@
     }
   }
   &__page {
+    &-modal {
+      &-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+      }
+
+      &-content {
+        background-color: #fff;
+        padding: 10px;
+        border-radius: 10px;
+        & img {
+          max-width: 100%;
+          max-height: 80vh;
+          border-radius: 5px;
+        }
+      }
+      &-prev,
+      &-next {
+        position: absolute;
+        top: 50%;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
+        border: none;
+        font-size: 24px;
+        cursor: pointer;
+        padding: 10px 20px;
+        border-radius: 50%;
+        transition: background-color 0.3s ease;
+
+        &:hover {
+          background-color: rgba(0, 0, 0, 0.8);
+        }
+      }
+
+      &-prev {
+        left: 20px;
+      }
+
+      &-next {
+        right: 20px;
+      }
+    }
     &-title {
       text-align: center;
       font-size: 56px;
