--- a/src/assest/css/attraction.scss
+++ b/src/assest/css/attraction.scss
@@ -25,6 +25,7 @@ a {
     width: 100%;
     height: 100%;
     border: 3px solid #7b61ff;
+    box-shadow: 5px 10px 50px #7b61ff;
     border-radius: 50%;
     transform: rotateZ(-7deg);
     z-index: 1;
@@ -82,10 +83,6 @@ a {
       width: 700px;
     }
   }
-  &__wrap {
-    display: flex;
-    justify-content: center;
-  }
 }
 
 .wrapper {
@@ -134,6 +131,16 @@ a {
     flex: 2 1 105px;
   }
   .attractions {
+    &__wrap {
+      display: flex;
+      flex-direction: column;
+    }
+    &__wrap::before {
+      width: 350px;
+      height: 100%;
+
+      left: 27px;
+    }
     &__image img {
       display: block;
       width: 100%;
@@ -150,6 +157,15 @@ a {
     }
     &__title {
       font-size: 24px;
+      &-text {
+        z-index: 2;
+        font-size: 28px;
+        width: 385px;
+      }
+      &-image {
+        width: 335px;
+        height: auto;
+      }
     }
     &__texts {
       display: flex;
